# hermes-sci

./: .gitignore  README.md  SKILL.md
.github/workflows/: ci.yml
package/: pyproject.toml
package/hermes_sci/: README.md  cli.py  coder.py  hardware.py  ideation.py  llm.py  results.py  review.py  treesearch.py  verify.py
package/hermes_sci/data/: package_fallbacks.yaml  sanitize_rules.yaml
package/hermes_sci/latex/: icml2024.tex.j2
package/hermes_sci/sanitize/: rules.py
scripts/: claude_proxy.py  install.sh
skills/hermes-sci/: README.md  SKILL.md
skills/hermes-sci/examples/: README.md  results_minimal.json  results_ml.json  results_nlp.json
skills/hermes-sci/package/: pyproject.toml
skills/hermes-sci/package/hermes_sci/: __init__.py  cli.py  config.py  ideation.py  novelty.py  orchestrator.py  progress.py  results.py  review.py  writeup.py
skills/hermes-sci/package/hermes_sci/data/: results_schema.json
skills/hermes-sci/package/hermes_sci/sanitize/: __init__.py  escape.py  math_balance.py  pipeline.py  tables.py
skills/hermes-sci/package/tests/: test_cli.py  test_dedup_tables.py  test_escape_underscore.py  test_math_balance.py  test_progress.py  test_results_schema.py  test_retry_backend.py  test_sanitize.py
skills/hermes-sci/scripts/: claude_proxy_ctl.sh
